
Changelog for pymta
===================

0.5.2 (12.06.2010)
- Fix bug - detect of command/message also when the terminator is sent in 
  multiple packages (fixes manual message submission with telnet)


0.5.1 (08.06.2010)
- Fix egg file generation: Include all necessary packages in eggs


0.5.0 (07.04.2010)
- Dropped dependency to repoze.workflow because the module added a lot of 
  dependencies recently (six others in total). The new, custom state machine
  also supports flags and conditions which suits SMTP very much.
- Added dependency to pycerberus (>= 0.3.1) to validate all sent parameters
  thoroughly with sensible error messages.
- All inputs from peers is now validated
- relaxed restrictions for the HELO/EHLO parameter (as real world clients don't
  send real host names)
- Fixed bug - ESMTP session switched back to plain SMTP after the first mail 
  was sent
- Fixed bug - Hang after sending data to a broken connection


0.4.0 (08.06.2009)
- Compatibility fixes for Python 2.3-2.6
- Policies can drop connection to the client before or after the response
- CommandParser is more robust against various socket errors
- Better infrastructure and documentation to use pymta in third-party tests


0.3.1 (27.02.2009)
 - Fixed bug which caused hang after unexpected connection drop by client


0.3 (15.02.2009)
 - Switch to process-based architecture, got rid of asyncore
 - Support for size-limitations of messages, huge messages will not be stored in
   memory if they will be rejected anyway (denial of service prevention)
 - API documentation is now auto-generated
 - Renamed DefaultMTAPolicy to IMTAPolicy and moved all interfaces to pymta.api
 - Added the debugging_server as an extremely simple example of a pymta-based 
   server


0.2.1 (19.12.2008)
 - wrote documentation
 - bug fixes
    - multiple messages in one SMTP transaction
    - transparency support for lines in the message starting with a dot


0.2 (16.12.2008)
 - initial release
