@@ -2,6 +2,9 @@
 Changelog for pymta
 ===================
 
+dev
+- require pycerberus >= 0.5 to simplify some validation code
+
 0.5.2 (12.06.2010)
 - Fix bug - detect of command/message also when the terminator is sent in 
   multiple packages (fixes manual message submission with telnet)
